# PerceptNet

./: .gitignore  LICENSE  Makefile  Project_Perception_MultiModal_Fusion.md  README.md  docker-compose.yml  pyproject.toml  requirements-gpu.txt  requirements-ros.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: fusion.yaml  kitti_pointpillars.yaml  ros2.yaml
docker/: Dockerfile.cuda  Dockerfile.ros2
docs/: ADR-001-roi-fusion.md  ADR-002-pointpillars.md  ADR-003-ab3dmot.md  ADR-004-tensorrt-int8.md  ADR-005-temporal-sync.md  ADR-006-modality-dropout.md  ADR-007-ros2.md  architecture.md
perceptnet/: __init__.py  utils.py
perceptnet/data/: __init__.py  augmentation.py  calibration.py  kitti_dataset.py  nuscenes_dataset.py
perceptnet/evaluation/: __init__.py  kitti_eval.py  robustness_study.py  tracking_eval.py
perceptnet/geometry/: __init__.py  boxes.py  heading.py  iou.py
perceptnet/models/: __init__.py  camera_branch.py  fusion.py  lidar_branch.py  losses.py  perceptnet.py  target_assigner.py
perceptnet/optimization/: __init__.py  benchmark.py  build_trt.py  export_onnx.py
perceptnet/ros2/: __init__.py  conversions.py  perceptnet_node.py
perceptnet/ros2/launch/: perceptnet.launch.py
perceptnet/tracking/: __init__.py  hungarian.py  kalman_filter_3d.py  tracker.py
perceptnet/visualization/: __init__.py  image_viz.py  open3d_viz.py
scripts/: benchmark.py  evaluate.py  export_onnx.py  infer_ros.py  robustness.py  train_fusion.py  train_lidar.py  visualize.py
tests/: test_calibration.py  test_camera.py  test_data.py  test_evaluation.py  test_fusion.py  test_geometry.py  test_losses.py  test_optimization.py  test_pointpillars.py  test_ros_conversions.py  test_tracker.py  test_viz.py
tests/fixtures/: make_mini_kitti.py
(+3 files in other folders)
